fix: correct index access in singleResult method of MapperSelect